# parallel

./: CMakeLists.txt  example_1.cpp  example_2.cpp  example_2_parallel.cpp  example_2_parallel_1.cpp  example_2_parallel_for.cpp  example_3_fibonacci.cpp  example_3_pi_1.cpp  example_3_pi_2.cpp  example_3_pi_3.cpp  example_3_pi_4.cpp  example_4_buble_sort_1.cpp  example_4_buble_sort_2.cpp  example_4_buble_sort_3.cpp  example_4_buble_sort_4.cpp  example_5_schedule_1.cpp  example_6_matrix_mul.cpp  example_6_matrix_mul_2.cpp  example_7_section.cpp  example_openacc_1.cpp  example_openacc_2.cpp  example_simd_0.cpp  example_simd_1.cpp  example_simd_2.cpp  final1.cpp  main.cpp  plebler1.cpp  plebler3.cpp  plebler5.cpp  plebler6.cpp  plebler99.cpp  vize2_2.cpp  vize2_3.cpp  vize_1.cpp  vize_2.cpp  vize_3.cpp  vize_4.cpp  vize_5.cpp
